# email-newsletter

./: Cargo.toml  Dockerfile  Justfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
http_requests/: Index.http  get.http
migrations/: 20230408142232_make_status_not_null_in_subscriptions.sql  20230427145740_seed_user.sql  20230509142513_create_idempotency_table.sql
src/: async_helpers.rs  authentication.rs  configuration.rs  domain.rs  email_client.rs  error_handling.rs  issue_delivery_worker.rs  lib.rs  main.rs  routing_helpers.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
src/routes/newsletters/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
