[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "email-newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.14"
