[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "email-newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.158", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.0", features = ["v4"] }
unicode-segmentation = "1"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
validator = "0.16"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
reqwest = "0.11.14"
once_cell = "1"
claims = "0.7"
